fixed text with overflow

--- a/css/media.css
+++ b/css/media.css
@@ -53,6 +53,9 @@
         padding-right: 44px;
         padding-left: 0px;
         margin-top: 0;
+        line-height: 20px;
+        max-height: 160px;
+
 
       }
       .title::before{
@@ -82,6 +85,7 @@
     .container_half__text{
         padding-right: 84px;
         padding-left: 0px;
+        
     }
 
     .container{
@@ -143,5 +147,9 @@
         display: block;
         padding-top: 36px;
         border-top: none;
+    }
+
+    .menu__item{
+      cursor: pointer;
     }
 }
